[package]
name = "todo-rs"
version = "0.1.0"
authors = ["Khue Nguyen <Z5483Y@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
better-panic = "0.2.0"
crossbeam-channel = "0.5.1"
crossterm = "0.19.0"
dirs-next = "2.0.0"
lazy_static = "1.4.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_yaml = "0.8.17"
structopt = "0.3.21"
tui = { version = "0.14", default-features = false, features = ["crossterm", "serde"] }
