[package]
name = "tdr"
version = "1.3.1"
authors = ["Khue Nguyen <Z5483Y@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://github.com/Z5483/tdr"
homepage = "https://github.com/Z5483/tdr"
repository = "https://github.com/Z5483/tdr"
readme = "README.md"
description = "Text-based user interface utility to manage todo list"
keywords = ["todo", "tui", "terminal"]
categories = ["command-line-utilities"]

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.42"
better-panic = "0.2.0"
chrono = "0.4.19"
crossbeam-channel = "0.5.1"
crossterm = "0.20.0"
dirs-next = "2.0.0"
lazy_static = "1.4.0"
regex = "1.5.4"
serde = { version = "1.0.127", features = ["derive"] }
serde_yaml = "0.8.17"
structopt = "0.3.22"
tui = { version = "0.16.0", default-features = false, features = ["crossterm", "serde"] }
